tests/ui/consts/const-eval/transmute-const.stderr
error[E0080]: it is undefined behavior to use this value
  --> $DIR/transmute-const.rs:4:1
   |
LL | static FOO: bool = unsafe { mem::transmute(3u8) };
   | ^^^^^^^^^^^^^^^^ constructing invalid value: encountered 0x03, but expected a boolean
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 1, align: 1) {
               03                                              │ .
           }

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
